// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cleo ops — real-registry tier-filter regression lock (T9845) > Tier 0 — domain-grouped operations snapshot > tier-0-groupedOperations 1`] = `
{
  "admin": {
    "mutate": [],
    "query": [
      "version",
      "health",
      "dash",
      "help",
      "smoke",
    ],
  },
  "focus": {
    "mutate": [],
    "query": [
      "show",
    ],
  },
  "memory": {
    "mutate": [
      "observe",
      "sweep",
    ],
    "query": [
      "find",
      "doctor",
      "sweep",
      "llm-status",
    ],
  },
  "orchestrate": {
    "mutate": [
      "pivot",
    ],
    "query": [],
  },
  "session": {
    "mutate": [
      "start",
      "end",
      "adopt",
    ],
    "query": [
      "status",
      "handoff.show",
      "briefing.show",
    ],
  },
  "tasks": {
    "mutate": [
      "add",
      "add-batch",
      "update",
      "complete",
      "saga.create",
      "saga.add",
      "saga.detach",
      "saga.repair",
      "saga.reconcile",
      "saga.migrate-containment",
      "start",
      "stop",
      "claim",
      "unclaim",
    ],
    "query": [
      "show",
      "find",
      "next",
      "plan",
      "current",
      "saga.list",
      "saga.members",
      "saga.rollup",
    ],
  },
  "tools": {
    "mutate": [],
    "query": [
      "skill.list",
      "provider.list",
      "provider.detect",
    ],
  },
}
`;

exports[`cleo ops — real-registry tier-filter regression lock (T9845) > Tier 0 — operation count snapshot > tier-0-operationCount 1`] = `44`;

exports[`cleo ops — real-registry tier-filter regression lock (T9845) > Tier 0 — verbose operations snapshot (cost-hint surface) > tier-0-verboseOperations 1`] = `
[
  {
    "costHint": "moderate",
    "description": "tasks.show (query)",
    "domain": "tasks",
    "gateway": "query",
    "operation": "show",
  },
  {
    "costHint": "minimal",
    "description": "tasks.find (query)",
    "domain": "tasks",
    "gateway": "query",
    "operation": "find",
  },
  {
    "costHint": "minimal",
    "description": "tasks.next (query)",
    "domain": "tasks",
    "gateway": "query",
    "operation": "next",
  },
  {
    "costHint": "minimal",
    "description": "Composite planning view with in-progress epics, ready tasks, blocked tasks, and open bugs (query)",
    "domain": "tasks",
    "gateway": "query",
    "operation": "plan",
  },
  {
    "costHint": "minimal",
    "description": "tasks.current (query)",
    "domain": "tasks",
    "gateway": "query",
    "operation": "current",
  },
  {
    "costHint": "minimal",
    "description": "session.status (query)",
    "domain": "session",
    "gateway": "query",
    "operation": "status",
  },
  {
    "costHint": "minimal",
    "description": "session.handoff.show - Show handoff data from the most recent ended session (query)",
    "domain": "session",
    "gateway": "query",
    "operation": "handoff.show",
  },
  {
    "costHint": "minimal",
    "description": "session.briefing.show - Composite session-start context (query)",
    "domain": "session",
    "gateway": "query",
    "operation": "briefing.show",
  },
  {
    "costHint": "minimal",
    "description": "memory.find (query) — cross-table brain.db FTS5 search",
    "domain": "memory",
    "gateway": "query",
    "operation": "find",
  },
  {
    "costHint": "minimal",
    "description": "admin.version (query)",
    "domain": "admin",
    "gateway": "query",
    "operation": "version",
  },
  {
    "costHint": "moderate",
    "description": "admin.health (query) — absorbs doctor via mode param",
    "domain": "admin",
    "gateway": "query",
    "operation": "health",
  },
  {
    "costHint": "moderate",
    "description": "admin.dash (query)",
    "domain": "admin",
    "gateway": "query",
    "operation": "dash",
  },
  {
    "costHint": "moderate",
    "description": "Get operations list and guidance filtered to specified disclosure tier",
    "domain": "admin",
    "gateway": "query",
    "operation": "help",
  },
  {
    "costHint": "minimal",
    "description": "tools.skill.list (query)",
    "domain": "tools",
    "gateway": "query",
    "operation": "skill.list",
  },
  {
    "costHint": "minimal",
    "description": "tools.provider.list (query)",
    "domain": "tools",
    "gateway": "query",
    "operation": "provider.list",
  },
  {
    "costHint": "minimal",
    "description": "tools.provider.detect (query)",
    "domain": "tools",
    "gateway": "query",
    "operation": "provider.detect",
  },
  {
    "costHint": "minimal",
    "description": "tasks.add (mutate)",
    "domain": "tasks",
    "gateway": "mutate",
    "operation": "add",
  },
  {
    "costHint": "minimal",
    "description": "tasks.add-batch (mutate) — bulk-create N tasks atomically in a single transaction (epic decomposition: 1 call instead of N)",
    "domain": "tasks",
    "gateway": "mutate",
    "operation": "add-batch",
  },
  {
    "costHint": "minimal",
    "description": "tasks.update (mutate)",
    "domain": "tasks",
    "gateway": "mutate",
    "operation": "update",
  },
  {
    "costHint": "minimal",
    "description": "tasks.complete (mutate)",
    "domain": "tasks",
    "gateway": "mutate",
    "operation": "complete",
  },
  {
    "costHint": "minimal",
    "description": "tasks.saga.create (mutate) — create a Saga as a first-class TaskType (type=saga) per ADR-083",
    "domain": "tasks",
    "gateway": "mutate",
    "operation": "saga.create",
  },
  {
    "costHint": "minimal",
    "description": "tasks.saga.add (mutate) — link an Epic to a Saga via task_relations type=groups",
    "domain": "tasks",
    "gateway": "mutate",
    "operation": "saga.add",
  },
  {
    "costHint": "minimal",
    "description": "tasks.saga.detach (mutate) — remove a Saga member relation (task_relations type=groups); idempotent; appends to .cleo/audit/saga-detach.jsonl (T10118)",
    "domain": "tasks",
    "gateway": "mutate",
    "operation": "saga.detach",
  },
  {
    "costHint": "minimal",
    "description": "tasks.saga.list (query) — list all Sagas (labeled top-level Epics)",
    "domain": "tasks",
    "gateway": "query",
    "operation": "saga.list",
  },
  {
    "costHint": "minimal",
    "description": "tasks.saga.members (query) — list member Epics linked to a Saga",
    "domain": "tasks",
    "gateway": "query",
    "operation": "saga.members",
  },
  {
    "costHint": "minimal",
    "description": "tasks.saga.rollup (query) — aggregate member Epic statuses (total/done/active/blocked/pending + completionPct)",
    "domain": "tasks",
    "gateway": "query",
    "operation": "saga.rollup",
  },
  {
    "costHint": "minimal",
    "description": "tasks.saga.repair (mutate) — detach I5-violating parentId and re-attach via task_relations type=groups; idempotent",
    "domain": "tasks",
    "gateway": "mutate",
    "operation": "saga.repair",
  },
  {
    "costHint": "minimal",
    "description": "tasks.saga.reconcile (mutate) — idempotent cron-safe saga auto-close repair; per-saga advisory lock + audit log; supersedes T10098",
    "domain": "tasks",
    "gateway": "mutate",
    "operation": "saga.reconcile",
  },
  {
    "costHint": "minimal",
    "description": "tasks.saga.migrate-containment (mutate) — convert parent_id-based Saga membership to groups relations; idempotent; audits to saga-contain-migration.jsonl",
    "domain": "tasks",
    "gateway": "mutate",
    "operation": "saga.migrate-containment",
  },
  {
    "costHint": "minimal",
    "description": "tasks.start (mutate)",
    "domain": "tasks",
    "gateway": "mutate",
    "operation": "start",
  },
  {
    "costHint": "minimal",
    "description": "tasks.stop (mutate)",
    "domain": "tasks",
    "gateway": "mutate",
    "operation": "stop",
  },
  {
    "costHint": "minimal",
    "description": "tasks.claim (mutate) — claim a task by assigning it to the current session",
    "domain": "tasks",
    "gateway": "mutate",
    "operation": "claim",
  },
  {
    "costHint": "minimal",
    "description": "tasks.unclaim (mutate) — unclaim a task by removing the current assignee",
    "domain": "tasks",
    "gateway": "mutate",
    "operation": "unclaim",
  },
  {
    "costHint": "minimal",
    "description": "session.start (mutate)",
    "domain": "session",
    "gateway": "mutate",
    "operation": "start",
  },
  {
    "costHint": "minimal",
    "description": "session.end (mutate)",
    "domain": "session",
    "gateway": "mutate",
    "operation": "end",
  },
  {
    "costHint": "minimal",
    "description": "session.adopt — rebind env to a specific session for multi-agent isolation (T9975)",
    "domain": "session",
    "gateway": "mutate",
    "operation": "adopt",
  },
  {
    "costHint": "minimal",
    "description": "orchestrate.pivot (mutate) — record an audited context switch from one task to another (replaces silent reframes)",
    "domain": "orchestrate",
    "gateway": "mutate",
    "operation": "pivot",
  },
  {
    "costHint": "minimal",
    "description": "memory.observe (mutate) — save observation to brain.db",
    "domain": "memory",
    "gateway": "mutate",
    "operation": "observe",
  },
  {
    "costHint": "minimal",
    "description": "memory.doctor (query) — read-only brain noise scan: detects duplicate-content, missing-type, missing-provenance, orphan-edge, low-confidence, stale-unverified patterns. Used as M7 assert-clean gate for Sentient v1 activation.",
    "domain": "memory",
    "gateway": "query",
    "operation": "doctor",
  },
  {
    "costHint": "minimal",
    "description": "memory.sweep (query/mutate) — T1147 W7 BRAIN noise sweep. dry-run: detect noise candidates and write sample JSON to agent-outputs. approve <runId>: apply sweep to live brain tables (sets killSwitch during tx). status: list all noise-sweep-2440 runs. rollback <runId>: discard a staged run without applying changes.",
    "domain": "memory",
    "gateway": "query",
    "operation": "sweep",
  },
  {
    "costHint": "minimal",
    "description": "memory.sweep (mutate) — T1147 W7 BRAIN noise sweep approve/rollback. approve <runId>: apply sweep to live brain tables. rollback <runId>: discard a staged run without applying changes.",
    "domain": "memory",
    "gateway": "mutate",
    "operation": "sweep",
  },
  {
    "costHint": "minimal",
    "description": "memory.llm-status (query) — report LLM backend resolution status and extraction readiness",
    "domain": "memory",
    "gateway": "query",
    "operation": "llm-status",
  },
  {
    "costHint": "minimal",
    "description": "admin.smoke (query) — operational smoke test: one read-only query per domain",
    "domain": "admin",
    "gateway": "query",
    "operation": "smoke",
  },
  {
    "costHint": "minimal",
    "description": "focus.show (query) — single-envelope orientation for a task, epic, or saga. Aggregates identity + scope + members + blockers + readyWave + attachedDocs + recentActivity + brainContext into ≤ 1 500 tokens.",
    "domain": "focus",
    "gateway": "query",
    "operation": "show",
  },
]
`;

exports[`cleo ops — real-registry tier-filter regression lock (T9845) > Tier 0/1/2 — guidance + escalation strings are stable > tier-guidance 1`] = `
{
  "tier0": {
    "escalation": "For more operations: query({domain:"admin",operation:"help",params:{tier:1}})",
    "guidance": "Tier 0: Core task and session operations (tasks, session, admin). 80% of use cases.",
  },
  "tier1": {
    "escalation": "For more operations: query({domain:"admin",operation:"help",params:{tier:2}})",
    "guidance": "Tier 1: + memory/research and check/validate operations. 15% of use cases.",
  },
  "tier2": {
    "escalation": "Full operation set displayed. Pass verbose:true for detailed object list.",
    "guidance": "Tier 2: Full access including pipeline, orchestrate, tools, nexus. 5% of use cases.",
  },
}
`;

exports[`cleo ops — real-registry tier-filter regression lock (T9845) > Tier 1 — domain-grouped operations snapshot > tier-1-groupedOperations 1`] = `
{
  "admin": {
    "mutate": [
      "init",
      "scaffold-hub",
      "config.set",
      "config.set-preset",
      "backup",
      "migrate",
      "cleanup",
      "job.cancel",
      "safestop",
      "inject.generate",
      "health",
      "context.inject",
      "detect",
      "map",
    ],
    "query": [
      "version",
      "health",
      "config.show",
      "config.presets",
      "stats",
      "context",
      "context.pull",
      "runtime",
      "paths",
      "job",
      "dash",
      "roadmap",
      "log",
      "sequence",
      "help",
      "backup",
      "adr.find",
      "smoke",
      "smoke.provider",
      "hooks.matrix",
      "map",
    ],
  },
  "attention": {
    "mutate": [
      "add",
    ],
    "query": [
      "list",
      "show",
    ],
  },
  "check": {
    "mutate": [
      "compliance.record",
      "test.run",
      "compliance.sync",
      "gate.set",
    ],
    "query": [
      "schema",
      "protocol",
      "task",
      "manifest",
      "output",
      "compliance.summary",
      "test",
      "test.coverage",
      "coherence",
      "gate.status",
      "archive.stats",
      "canon",
      "canon.docs",
      "workflow.compliance",
      "verify.explain",
    ],
  },
  "docs": {
    "mutate": [
      "add",
      "remove",
      "supersede",
      "update",
    ],
    "query": [
      "list",
      "fetch",
      "generate",
      "llm-output",
    ],
  },
  "focus": {
    "mutate": [],
    "query": [
      "show",
    ],
  },
  "intelligence": {
    "mutate": [],
    "query": [
      "predict",
      "suggest",
      "learn-errors",
      "confidence",
      "match",
    ],
  },
  "memory": {
    "mutate": [
      "observe",
      "decision.store",
      "pattern.store",
      "learning.store",
      "link",
      "code.link",
      "code.auto-link",
      "sweep",
      "diary.write",
      "verify",
      "precompact-flush",
      "backfill.run",
      "backfill.approve",
      "backfill.rollback",
    ],
    "query": [
      "find",
      "timeline",
      "fetch",
      "decision.find",
      "pattern.find",
      "learning.find",
      "quality",
      "code.links",
      "code.memories-for-code",
      "code.for-memory",
      "doctor",
      "sweep",
      "llm-status",
      "pending-verify",
      "bridge",
      "promote-explain",
      "digest",
      "recent",
      "diary",
      "watch",
      "backfill.list",
    ],
  },
  "nexus": {
    "mutate": [
      "profile.import",
      "profile.export",
      "profile.reinforce",
      "sigil.sync",
      "projects.register",
      "projects.remove",
      "projects.scan",
      "projects.clean",
      "refresh-bridge",
    ],
    "query": [
      "status",
      "list",
      "top-entries",
      "impact",
      "profile.view",
      "profile.get",
      "sigil.list",
      "clusters",
      "flows",
      "context",
      "projects.list",
      "diff",
      "query-cte",
      "hot-paths",
      "hot-nodes",
      "cold-symbols",
    ],
  },
  "orchestrate": {
    "mutate": [
      "ivtr.start",
      "ivtr.next",
      "ivtr.release",
      "ivtr.loop-back",
      "start",
      "spawn",
      "handoff",
      "spawn.execute",
      "validate",
      "pivot",
      "parallel",
    ],
    "query": [
      "status",
      "ivtr.status",
      "next",
      "ready",
      "analyze",
      "context",
      "waves",
      "report",
      "plan",
      "bootstrap",
      "unblock.opportunities",
    ],
  },
  "pipeline": {
    "mutate": [
      "stage.record",
      "stage.skip",
      "stage.reset",
      "stage.gate.pass",
      "stage.gate.fail",
      "manifest.append",
      "manifest.archive",
      "phase.set",
      "phase.advance",
      "phase.rename",
      "phase.delete",
      "release.cancel",
      "release.rollback",
      "release.rollback.full",
    ],
    "query": [
      "stage.validate",
      "stage.status",
      "stage.history",
      "stage.guidance",
      "phase.show",
      "phase.list",
      "manifest.show",
      "manifest.list",
      "manifest.find",
      "manifest.stats",
      "release.list",
      "release.show",
      "release.channel.show",
      "release.pr-status",
    ],
  },
  "playbook": {
    "mutate": [],
    "query": [
      "validate",
    ],
  },
  "provenance": {
    "mutate": [
      "backfill",
    ],
    "query": [
      "verify",
    ],
  },
  "release": {
    "mutate": [
      "gate",
      "ivtr-suggest",
      "plan",
      "open",
      "reconcile",
    ],
    "query": [
      "gate",
      "ivtr-suggest",
      "validate-changelog",
    ],
  },
  "session": {
    "mutate": [
      "start",
      "end",
      "resume",
      "suspend",
      "gc",
      "record.decision",
      "record.assumption",
      "adopt",
    ],
    "query": [
      "status",
      "list",
      "show",
      "decision.log",
      "context.drift",
      "handoff.show",
      "briefing.show",
      "find",
      "lint",
    ],
  },
  "sticky": {
    "mutate": [
      "add",
      "convert",
      "archive",
      "purge",
    ],
    "query": [
      "list",
      "show",
    ],
  },
  "tasks": {
    "mutate": [
      "projection.repair",
      "add",
      "add-batch",
      "update",
      "complete",
      "cancel",
      "delete",
      "archive",
      "restore",
      "reparent",
      "reorder",
      "relates.add",
      "relates.add-batch",
      "relates.remove",
      "saga.create",
      "saga.add",
      "saga.detach",
      "saga.repair",
      "saga.reconcile",
      "saga.migrate-containment",
      "start",
      "stop",
      "sync.reconcile",
      "sync.links.remove",
      "claim",
      "unclaim",
    ],
    "query": [
      "show",
      "traverse",
      "tree",
      "rollup",
      "frontier",
      "workgraph.audit",
      "list",
      "find",
      "tree",
      "blockers",
      "depends",
      "deps.validate",
      "deps.tree",
      "analyze",
      "impact",
      "next",
      "plan",
      "completion.list",
      "completion.evaluate",
      "completion.explain",
      "relates",
      "complexity.estimate",
      "history",
      "current",
      "label.list",
      "saga.list",
      "saga.members",
      "saga.rollup",
      "sync.links",
      "context",
    ],
  },
  "tools": {
    "mutate": [
      "skill.install",
      "skill.uninstall",
      "skill.refresh",
      "provider.inject",
    ],
    "query": [
      "issue.diagnostics",
      "skill.list",
      "skill.show",
      "skill.find",
      "skill.federated.find",
      "skill.dispatch",
      "skill.verify",
      "skill.dependencies",
      "skill.spawn.providers",
      "skill.precedence",
      "skill.doctor.diagnose",
      "skill.stats",
      "provider.list",
      "provider.detect",
      "provider.inject.status",
      "provider.supports",
      "provider.hooks",
    ],
  },
  "worktree": {
    "mutate": [
      "prune",
      "forceUnlock",
      "adopt",
      "destroy",
    ],
    "query": [
      "list",
    ],
  },
}
`;

exports[`cleo ops — real-registry tier-filter regression lock (T9845) > Tier 1 — operation count snapshot > tier-1-operationCount 1`] = `297`;

exports[`cleo ops — real-registry tier-filter regression lock (T9845) > Tier 2 — domain-grouped operations snapshot > tier-2-groupedOperations 1`] = `
{
  "admin": {
    "mutate": [
      "init",
      "scaffold-hub",
      "config.set",
      "config.set-preset",
      "backup",
      "migrate",
      "cleanup",
      "job.cancel",
      "safestop",
      "inject.generate",
      "install.global",
      "token",
      "adr.sync",
      "health",
      "context.inject",
      "import",
      "detect",
      "map",
    ],
    "query": [
      "version",
      "health",
      "config.show",
      "config.presets",
      "stats",
      "context",
      "context.pull",
      "runtime",
      "paths",
      "job",
      "dash",
      "roadmap",
      "log",
      "sequence",
      "help",
      "backup",
      "token",
      "adr.show",
      "adr.find",
      "export",
      "smoke",
      "smoke.provider",
      "hooks.matrix",
      "map",
    ],
  },
  "attention": {
    "mutate": [
      "add",
    ],
    "query": [
      "list",
      "show",
    ],
  },
  "check": {
    "mutate": [
      "compliance.record",
      "test.run",
      "compliance.sync",
      "gate.set",
    ],
    "query": [
      "schema",
      "protocol",
      "task",
      "manifest",
      "output",
      "compliance.summary",
      "test",
      "test.coverage",
      "coherence",
      "gate.status",
      "archive.stats",
      "grade",
      "grade.list",
      "canon",
      "canon.docs",
      "workflow.compliance",
      "verify.explain",
    ],
  },
  "conduit": {
    "mutate": [
      "start",
      "stop",
      "send",
      "publish",
      "subscribe",
    ],
    "query": [
      "status",
      "peek",
      "listen",
    ],
  },
  "diagnostics": {
    "mutate": [
      "enable",
      "disable",
    ],
    "query": [
      "status",
      "analyze",
      "export",
    ],
  },
  "docs": {
    "mutate": [
      "add",
      "remove",
      "supersede",
      "update",
    ],
    "query": [
      "list",
      "fetch",
      "generate",
      "llm-output",
    ],
  },
  "focus": {
    "mutate": [],
    "query": [
      "show",
    ],
  },
  "intelligence": {
    "mutate": [],
    "query": [
      "predict",
      "suggest",
      "learn-errors",
      "confidence",
      "match",
    ],
  },
  "llm": {
    "mutate": [
      "add",
      "remove",
      "use",
      "profile",
    ],
    "query": [
      "list",
      "test",
      "whoami",
      "auxiliary-status",
    ],
  },
  "memory": {
    "mutate": [
      "observe",
      "decision.store",
      "pattern.store",
      "learning.store",
      "link",
      "graph.add",
      "graph.remove",
      "code.link",
      "code.auto-link",
      "sweep",
      "diary.write",
      "verify",
      "precompact-flush",
      "backfill.run",
      "backfill.approve",
      "backfill.rollback",
    ],
    "query": [
      "find",
      "timeline",
      "fetch",
      "decision.find",
      "pattern.find",
      "learning.find",
      "graph.show",
      "graph.neighbors",
      "graph.trace",
      "graph.related",
      "graph.context",
      "graph.stats",
      "reason.why",
      "reason.similar",
      "search.hybrid",
      "quality",
      "code.links",
      "code.memories-for-code",
      "code.for-memory",
      "doctor",
      "sweep",
      "llm-status",
      "pending-verify",
      "bridge",
      "promote-explain",
      "digest",
      "recent",
      "diary",
      "watch",
      "backfill.list",
    ],
  },
  "nexus": {
    "mutate": [
      "share.snapshot.export",
      "share.snapshot.import",
      "init",
      "register",
      "unregister",
      "sync",
      "permission.set",
      "reconcile",
      "transfer",
      "contracts-sync",
      "contracts-link-tasks",
      "conduit-scan",
      "profile.import",
      "profile.export",
      "profile.reinforce",
      "profile.upsert",
      "profile.supersede",
      "sigil.sync",
      "projects.register",
      "projects.remove",
      "projects.scan",
      "projects.clean",
      "refresh-bridge",
    ],
    "query": [
      "augment",
      "share.status",
      "status",
      "list",
      "show",
      "resolve",
      "deps",
      "graph",
      "path.show",
      "blockers.show",
      "orphans.list",
      "discover",
      "search",
      "transfer.preview",
      "top-entries",
      "impact",
      "full-context",
      "task-footprint",
      "brain-anchors",
      "why",
      "impact-full",
      "route-map",
      "shape-check",
      "search-code",
      "wiki",
      "contracts-show",
      "task-symbols",
      "profile.view",
      "profile.get",
      "sigil.list",
      "clusters",
      "flows",
      "context",
      "projects.list",
      "diff",
      "query-cte",
      "hot-paths",
      "hot-nodes",
      "cold-symbols",
    ],
  },
  "orchestrate": {
    "mutate": [
      "ivtr.start",
      "ivtr.next",
      "ivtr.release",
      "ivtr.loop-back",
      "start",
      "spawn",
      "handoff",
      "spawn.execute",
      "validate",
      "pivot",
      "parallel",
      "fanout",
      "approve",
      "reject",
      "worktree.complete",
      "worktree.cleanup",
      "worktree.prune",
    ],
    "query": [
      "status",
      "events",
      "ivtr.status",
      "next",
      "ready",
      "analyze",
      "context",
      "waves",
      "report",
      "plan",
      "bootstrap",
      "unblock.opportunities",
      "classify",
      "fanout.status",
      "pending",
    ],
  },
  "pipeline": {
    "mutate": [
      "stage.record",
      "stage.skip",
      "stage.reset",
      "stage.gate.pass",
      "stage.gate.fail",
      "manifest.append",
      "manifest.archive",
      "phase.set",
      "phase.advance",
      "phase.rename",
      "phase.delete",
      "release.cancel",
      "release.rollback",
      "release.rollback.full",
    ],
    "query": [
      "stage.validate",
      "stage.status",
      "stage.history",
      "stage.guidance",
      "phase.show",
      "phase.list",
      "manifest.show",
      "manifest.list",
      "manifest.find",
      "manifest.stats",
      "release.list",
      "release.show",
      "release.channel.show",
      "release.pr-status",
    ],
  },
  "playbook": {
    "mutate": [
      "run",
      "resume",
    ],
    "query": [
      "status",
      "list",
      "validate",
    ],
  },
  "provenance": {
    "mutate": [
      "backfill",
    ],
    "query": [
      "verify",
    ],
  },
  "release": {
    "mutate": [
      "gate",
      "ivtr-suggest",
      "plan",
      "open",
      "reconcile",
    ],
    "query": [
      "gate",
      "ivtr-suggest",
      "validate-changelog",
    ],
  },
  "selfimprove": {
    "mutate": [
      "run",
    ],
    "query": [],
  },
  "sentient": {
    "mutate": [
      "propose.accept",
      "propose.reject",
      "propose.run",
      "propose.enable",
      "propose.disable",
      "allowlist.add",
      "allowlist.remove",
    ],
    "query": [
      "status",
      "propose.list",
      "propose.diff",
      "allowlist.list",
    ],
  },
  "session": {
    "mutate": [
      "start",
      "end",
      "resume",
      "suspend",
      "gc",
      "record.decision",
      "record.assumption",
      "adopt",
    ],
    "query": [
      "status",
      "list",
      "show",
      "decision.log",
      "context.drift",
      "handoff.show",
      "briefing.show",
      "find",
      "lint",
    ],
  },
  "sticky": {
    "mutate": [
      "add",
      "convert",
      "archive",
      "purge",
    ],
    "query": [
      "list",
      "show",
    ],
  },
  "tasks": {
    "mutate": [
      "projection.repair",
      "add",
      "add-batch",
      "update",
      "complete",
      "cancel",
      "delete",
      "archive",
      "restore",
      "reparent",
      "reorder",
      "relates.add",
      "relates.add-batch",
      "relates.remove",
      "saga.create",
      "saga.add",
      "saga.detach",
      "saga.repair",
      "saga.reconcile",
      "saga.migrate-containment",
      "start",
      "stop",
      "sync.reconcile",
      "sync.links.remove",
      "claim",
      "unclaim",
    ],
    "query": [
      "show",
      "traverse",
      "tree",
      "rollup",
      "frontier",
      "workgraph.audit",
      "list",
      "find",
      "tree",
      "blockers",
      "depends",
      "deps.validate",
      "deps.tree",
      "analyze",
      "impact",
      "next",
      "plan",
      "completion.list",
      "completion.evaluate",
      "completion.explain",
      "relates",
      "complexity.estimate",
      "history",
      "current",
      "label.list",
      "saga.list",
      "saga.members",
      "saga.rollup",
      "sync.links",
      "context",
    ],
  },
  "tools": {
    "mutate": [
      "skill.prune.telemetry",
      "skill.import.hermes",
      "skill.migrate",
      "skill.install",
      "skill.uninstall",
      "skill.refresh",
      "provider.inject",
      "adapter.activate",
      "adapter.dispose",
    ],
    "query": [
      "issue.diagnostics",
      "skill.list",
      "skill.show",
      "skill.find",
      "skill.federated.find",
      "skill.dispatch",
      "skill.verify",
      "skill.dependencies",
      "skill.spawn.providers",
      "skill.catalog",
      "skill.precedence",
      "skill.doctor.diagnose",
      "skill.stats",
      "provider.list",
      "provider.detect",
      "provider.inject.status",
      "provider.supports",
      "provider.hooks",
      "adapter.list",
      "adapter.show",
      "adapter.detect",
      "adapter.health",
    ],
  },
  "upgrade": {
    "mutate": [
      "workflows",
    ],
    "query": [
      "workflows",
    ],
  },
  "worktree": {
    "mutate": [
      "prune",
      "forceUnlock",
      "adopt",
      "destroy",
    ],
    "query": [
      "list",
    ],
  },
}
`;

exports[`cleo ops — real-registry tier-filter regression lock (T9845) > Tier 2 — operation count snapshot (full surface) > tier-2-operationCount 1`] = `413`;
